force-app/main/default/objects/Payment_schedule__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <formula>IF(
    TEXT(Type__c) = &quot;Land&quot;,
    Quote__r.Total_Land_Amount__c * Payment_percent__c,
    IF(
        TEXT(Type__c) = &quot;Construction&quot;,
        Quote__r.Construction_Cost__c * Payment_percent__c,
        Quote__r.Grand_Total_Amount__c * Payment_percent__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>