force-app/main/default/objects/Payment_schedule__c/fields/AmountB__c.field-meta.xml
<CustomField>
    <fullName>AmountB__c</fullName>
    <formula>IF(
TEXT(Type__c) = &quot;Land&quot;,
Booking__r.Total_Land_Amount__c * Payment_percent__c,
IF(
TEXT(Type__c) = &quot;Construction&quot;,
 Booking__r.Construction_Cost__c * Payment_percent__c,
 Booking__r.Total_Amount__c * Payment_percent__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>