force-app/main/default/objects/Payment_schedule__c/fields/Booking_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner_Name__c</fullName>
    <formula>Booking__r.Owner_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Owner Name</label>
    <type>Text</type>
</CustomField>