force-app/main/default/objects/Payment_schedule__c/fields/Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage__c</fullName>
    <formula>TEXT( Booking__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Stage</label>
    <type>Text</type>
</CustomField>