force-app/main/default/objects/Payment_schedule__c/fields/Completed_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Filter__c</fullName>
    <formula>DATETIMEVALUE(Completed_Date_New__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Date_Filter</label>
    <type>DateTime</type>
</CustomField>