force-app/main/default/objects/Payment_schedule__c/fields/Completed_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_New__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>