force-app/main/default/objects/Payment_schedule__c/fields/Dashboard_Filter__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Filter__c</fullName>
    <formula>CASE( TEXT(Booking__r.Project__c ),
&quot;Trifecta Vanto&quot;, DATE(2026,1,1),
&quot;Trifecta Veranza&quot;, DATE(2026,1,2),
&quot;Trifecta Verde En Resplandor&quot;, DATE(2026,1,3),
&quot;Trifecta Retto&quot;, DATE(2026,1,4),
&quot;None&quot;, DATE(2026,1,5),
&quot;Trifecta Bueno&quot;, DATE(2026,1,6),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dashboard Filter</label>
    <type>Date</type>
</CustomField>