force-app/main/default/objects/Payment_schedule__c/fields/Default_Due_Date_in_days__c.field-meta.xml
<CustomField>
    <fullName>Default_Due_Date_in_days__c</fullName>
    <formula>10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Due Date (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>