force-app/main/default/objects/Payment_schedule__c/fields/Demand_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Demand_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Uploaded</label>
    <type>Checkbox</type>
</CustomField>