force-app/main/default/objects/Payment_schedule__c/fields/Include_Interest__c.field-meta.xml
<CustomField>
    <fullName>Include_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Interest</label>
    <type>Checkbox</type>
</CustomField>