force-app/main/default/objects/Payment_schedule__c/fields/Interest_A__c.field-meta.xml
<CustomField>
    <fullName>Interest_A__c</fullName>
    <label>Interest Amount (For Received Amount)</label>
    <summarizedField>Interest_Amount_Line_Item__c.Interest_Amount__c</summarizedField>
    <summaryForeignKey>Interest_Amount_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>