force-app/main/default/objects/Payment_schedule__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <description>For Pending amount in Payment Schdule</description>
    <formula>IF(
    Include_Interest__c,
    IF(
        NOT(ISBLANK(PaymentDueDate__c)) &amp;&amp; PaymentDueDate__c &lt; TODAY(),
        MAX((
                Pending_Amount__c 
                * Interest_Percent__c 
                * (TODAY() - PaymentDueDate__c)
            )/ 365,
            0),
        0
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Amount (for Pending Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>