force-app/main/default/objects/Payment_schedule__c/fields/Interest_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Pending_Amount__c</fullName>
    <formula>Interest_Up_to_Date__c - Interest_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Pending Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>