force-app/main/default/objects/Payment_schedule__c/fields/Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>Interest_Percent__c</fullName>
    <label>Interest Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>