force-app/main/default/objects/Payment_schedule__c/fields/Interest_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Up_to_Date__c</fullName>
    <formula>Interest_A__c + Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Up to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>