force-app/main/default/objects/Payment_schedule__c/fields/Last_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>