force-app/main/default/objects/Payment_schedule__c/fields/Last_Payment_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Time__c</fullName>
    <label>Last Payment Time</label>
    <type>DateTime</type>
</CustomField>