force-app/main/default/objects/Payment_schedule__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <label>Not in Use</label>
    <type>Date</type>
</CustomField>