force-app/main/default/objects/Payment_schedule__c/fields/Payment_percent__c.field-meta.xml
<CustomField>
    <fullName>Payment_percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>