force-app/main/default/objects/Payment_schedule__c/fields/Payment_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Type__c</fullName>
    <formula>IF(ISBLANK(Master_Payment_Schedule__c), &apos;Custom Payment Schedule&apos; , &apos;Standard Payment Schedule&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Schedule Type</label>
    <type>Text</type>
</CustomField>