force-app/main/default/objects/Payment_schedule__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <formula>Demanded_Date__c + 
(Default_Due_Date_in_days__c + BLANKVALUE(Due_Date_Extension__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>