force-app/main/default/objects/Payment_schedule__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>if(Received_Amount1__c &gt; ( Amount__c + Total_TDS_Refund_Issued__c) ,0 , ( Amount__c + Total_TDS_Refund_Issued__c) - Received_Amount1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>