force-app/main/default/objects/Payment_schedule__c/fields/Pending_Amount_Without_Tds__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount_Without_Tds__c</fullName>
    <formula>Pending_Amount__c - Pending_Tds_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount Without Tds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>