force-app/main/default/objects/Payment_schedule__c/fields/Pending_Tds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Tds_Amount__c</fullName>
    <formula>Total_TDS_Amount__c - Total_TDS_From_Bank__c +  Total_TDS_Refund_Issued__c   -  Received_Tds_Amount__c 
/* 10,000 - 10,000 + 10,000 - 10,000 */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Tds Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>