force-app/main/default/objects/Payment_schedule__c/fields/Pending_TDS_Refund__c.field-meta.xml
<CustomField>
    <fullName>Pending_TDS_Refund__c</fullName>
    <formula>Total_TDS_From_Bank__c - Total_TDS_Refund_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending TDS Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>