force-app/main/default/objects/Payment_schedule__c/fields/Received_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount1__c</fullName>
    <label>Received Amount</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Approval_Status_Picklist__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval, Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Interest</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>