force-app/main/default/objects/Payment_schedule__c/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <label>Not in Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>