force-app/main/default/objects/Payment_schedule__c/fields/Received_Tds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Tds_Amount__c</fullName>
    <label>Received Tds Challan Amount</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>TDS Challan Entry</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>