force-app/main/default/objects/Payment_schedule__c/fields/Recived_Per__c.field-meta.xml
<CustomField>
    <fullName>Recived_Per__c</fullName>
    <label>Received Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>