force-app/main/default/objects/Payment_schedule__c/fields/Tds__c.field-meta.xml
<CustomField>
    <fullName>Tds__c</fullName>
    <formula>IF(
TEXT(Type__c) = &apos;Construction&apos;,
2,
IF(
TEXT(Type__c) = &apos;Land&apos;,
1,
1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tds %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>