force-app/main/default/objects/Payment_schedule__c/fields/Termination_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Date__c</fullName>
    <formula>Demanded_Date__c + 49</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Mail Date</label>
    <type>Date</type>
</CustomField>