force-app/main/default/objects/Payment_schedule__c/fields/Total_Amount_Without_Tds__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Without_Tds__c</fullName>
    <formula>Amount__c - Total_TDS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Without Tds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>