force-app/main/default/objects/Payment_schedule__c/fields/Total_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Amount__c</fullName>
    <formula>AmountB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>