force-app/main/default/objects/Payment_schedule__c/fields/Total_TDS_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_TDS_Amount__c</fullName>
    <formula>IF(
    TEXT(Type__c) = &apos;Construction&apos;,
    Amount__c * 0.02,
    IF(
        TEXT(Type__c) = &apos;Land&apos;,
        Amount__c * 0.01,
        Amount__c * 0.01
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TDS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>