force-app/main/default/objects/Payment_schedule__c/fields/Total_TDS_From_Bank__c.field-meta.xml
<CustomField>
    <fullName>Total_TDS_From_Bank__c</fullName>
    <label>Total TDS From Bank</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>TDS from Bank</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>