force-app/main/default/objects/Payment_schedule__c/fields/Total_TDS_Refund_Issued__c.field-meta.xml
<CustomField>
    <fullName>Total_TDS_Refund_Issued__c</fullName>
    <label>TDS Refund Given To Customer</label>
    <summarizedField>Refund__c.Refund_Amount__c</summarizedField>
    <summaryForeignKey>Refund__c.Payment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>