force-app/main/default/objects/Payment_schedule__c/fields/Villa_Flat_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Villa_Flat_Amount_Pending__c</fullName>
    <label>not in use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>