force-app/main/default/objects/Payment_schedule__c/fields/Without_Tds_Amount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Without_Tds_Amount_Percent__c</fullName>
    <formula>IF(
TEXT(Type__c) = &apos;Construction&apos;,
98,
IF(
TEXT(Type__c) = &apos;Land&apos;,
99,
99
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Without Tds Amount Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>