force-app/main/default/objects/Payment_schedule__c/fields/X1st_Interest_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Interest_Reminder_Date__c</fullName>
    <formula>Demanded_Date__c + 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not In Use</label>
    <type>Date</type>
</CustomField>