force-app/main/default/objects/Payment_schedule__c/fields/X1st_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X1st_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>