force-app/main/default/objects/Payment_schedule__c/fields/X2nd_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>